examples/datalog/27_atomic_ops/02_conditional_update.dl.out
Executing script: examples/datalog/27_atomic_ops/02_conditional_update.dl

> .db create conditional_update_test
Database 'conditional_update_test' created.
Switched to database: conditional_update_test
> .db use conditional_update_test
Switched to database: conditional_update_test
> +product(1, "Widget", 100).
Inserted 1 fact into 'product'.
> +product(2, "Gadget", 200).
Inserted 1 fact into 'product'.
> +product(3, "Gizmo", 50).
Inserted 1 fact into 'product'.
> +product(4, "Doohickey", 150).
Inserted 1 fact into 'product'.
> ?- product(Id, Name, Price).
4 rows:
  (1, "Widget", 100)
  (2, "Gadget", 200)
  (3, "Gizmo", 50)
  (4, "Doohickey", 150)
> -product(Id, Name, OldPrice), +product(Id, Name, NewPrice) :- product(Id, Name, OldPrice), OldPrice > 100, NewPrice = OldPrice * 0.9.
Script error: Line 18: Parse error: Invalid arithmetic expression: '0.9'
